[gd_scene load_steps=40 format=3 uid="uid://cik2ifeukgsod"]

[ext_resource type="Script" path="res://end_scene.gd" id="1_1seuq"]
[ext_resource type="Texture2D" uid="uid://d13b1rwfy4def" path="res://icon.svg" id="2_xcm2b"]
[ext_resource type="Texture2D" uid="uid://ec6w73olnslg" path="res://assets/bg.jpg" id="3_8fpwt"]
[ext_resource type="Texture2D" uid="uid://cghancsjectg3" path="res://assets/boreman.png" id="3_cfga8"]
[ext_resource type="Script" path="res://Boreman_anim.gd" id="4_gbxxv"]
[ext_resource type="Texture2D" uid="uid://yojir4otjt42" path="res://assets/Picking Up Phone/pickup_0000.png" id="5_4ik28"]
[ext_resource type="Texture2D" uid="uid://byhkweh4133xn" path="res://assets/angry/angry_0001.png" id="6_fx52d"]
[ext_resource type="Texture2D" uid="uid://b217fpl5klwbt" path="res://assets/angry/angry_0002.png" id="7_0m7yg"]
[ext_resource type="Texture2D" uid="uid://laijymxast31" path="res://assets/angry/angry_0004.png" id="8_0tx4t"]
[ext_resource type="Texture2D" uid="uid://dw06jh0bcwmpb" path="res://assets/boreman_light_0.png" id="9_1lejk"]
[ext_resource type="Texture2D" uid="uid://rwpt703v8foj" path="res://assets/boreman_light_1.png" id="10_g8d8x"]
[ext_resource type="Texture2D" uid="uid://dmxkb5auuo3lf" path="res://assets/laughin/laughin_0000.png" id="11_hharr"]
[ext_resource type="Texture2D" uid="uid://cqvbi7u6rygqa" path="res://assets/laughin/laughin_0002.png" id="12_tkfpb"]
[ext_resource type="Texture2D" uid="uid://ce3tywgfb01gh" path="res://assets/laughin/laughin_0004.png" id="13_uwvun"]
[ext_resource type="Texture2D" uid="uid://cq8ko31k5lw1q" path="res://assets/laughin/laughin_0006.png" id="14_4oouq"]
[ext_resource type="Texture2D" uid="uid://w83lfummky2x" path="res://assets/laughin/laughin_0008.png" id="15_aopp6"]
[ext_resource type="Texture2D" uid="uid://b8v1utq4silya" path="res://assets/laughin/laughin_0009.png" id="16_n3dxh"]
[ext_resource type="Texture2D" uid="uid://cph5jnas1ie46" path="res://assets/laughin/laughin_0010.png" id="17_lat03"]
[ext_resource type="Texture2D" uid="uid://dgh5m62ayh58" path="res://assets/laughin/laughin_0012.png" id="18_3i2cw"]
[ext_resource type="Texture2D" uid="uid://c4fwrnbqmd41o" path="res://assets/laughin/laughin_0014.png" id="19_7mkes"]
[ext_resource type="Texture2D" uid="uid://leyec7mtodst" path="res://assets/Picking Up Phone/pickup_0003.png" id="20_b6ppv"]
[ext_resource type="Texture2D" uid="uid://c62dugcrwgyvy" path="res://assets/Picking Up Phone/pickup_0007.png" id="21_c7i4n"]
[ext_resource type="Texture2D" uid="uid://qqhqi5debxpi" path="res://assets/Picking Up Phone/pickup_0009.png" id="22_ou53y"]
[ext_resource type="AudioStream" uid="uid://dt50iavt5xptf" path="res://assets/audio/off.wav" id="23_rh71b"]
[ext_resource type="FontFile" uid="uid://buu1ia33jgqdw" path="res://assets/fonts/techno-race-italic-font/TechnoRaceItalic-eZRWe.otf" id="24_yg5fw"]
[ext_resource type="Texture2D" uid="uid://btc7hxw861451" path="res://assets/border.png" id="26_i61tf"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rnajy"]
animation = &"boredman"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_67lq3"]
animation = &"put_down"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5desr"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mb478"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_b0uha"]
states/End/position = Vector2(901, 100)
states/Start/position = Vector2(180, 100)
states/boredman/node = SubResource("AnimationNodeAnimation_rnajy")
states/boredman/position = Vector2(583, 100)
states/put_down/node = SubResource("AnimationNodeAnimation_67lq3")
states/put_down/position = Vector2(365, 100)
transitions = ["Start", "put_down", SubResource("AnimationNodeStateMachineTransition_5desr"), "put_down", "boredman", SubResource("AnimationNodeStateMachineTransition_mb478")]
graph_offset = Vector2(-5, -46)

[sub_resource type="Animation" id="Animation_e8ifh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_cfga8")]
}

[sub_resource type="Animation" id="Animation_fsoqf"]
resource_name = "boredman"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_4ik28")]
}

[sub_resource type="Animation" id="Animation_dlup1"]
resource_name = "cringing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_fx52d"), ExtResource("7_0m7yg"), ExtResource("8_0tx4t"), ExtResource("7_0m7yg"), ExtResource("6_fx52d")]
}

[sub_resource type="Animation" id="Animation_fvbf4"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("9_1lejk"), ExtResource("10_g8d8x"), ExtResource("9_1lejk")]
}

[sub_resource type="Animation" id="Animation_3iqsd"]
resource_name = "laughing"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("11_hharr"), ExtResource("12_tkfpb"), ExtResource("13_uwvun"), ExtResource("14_4oouq"), ExtResource("15_aopp6"), ExtResource("16_n3dxh"), ExtResource("17_lat03"), ExtResource("18_3i2cw"), ExtResource("19_7mkes"), ExtResource("13_uwvun"), ExtResource("12_tkfpb"), ExtResource("11_hharr")]
}

[sub_resource type="Animation" id="Animation_ty5u0"]
resource_name = "picking_up_phone"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_4ik28"), ExtResource("20_b6ppv"), ExtResource("21_c7i4n"), ExtResource("22_ou53y")]
}

[sub_resource type="Animation" id="Animation_y7iyr"]
resource_name = "put_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("22_ou53y"), ExtResource("21_c7i4n"), ExtResource("20_b6ppv"), ExtResource("5_4ik28")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lre4a"]
_data = {
"RESET": SubResource("Animation_e8ifh"),
"boredman": SubResource("Animation_fsoqf"),
"cringing": SubResource("Animation_dlup1"),
"idle": SubResource("Animation_fvbf4"),
"laughing": SubResource("Animation_3iqsd"),
"picking_up_phone": SubResource("Animation_ty5u0"),
"put_down": SubResource("Animation_y7iyr")
}

[node name="EndScene" type="Node2D"]
script = ExtResource("1_1seuq")

[node name="Icon2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(678.498, 90.5016)
scale = Vector2(27.3985, 16.7265)
texture = ExtResource("2_xcm2b")

[node name="Bg" type="Sprite2D" parent="."]
modulate = Color(0.160784, 0.219608, 0.227451, 0.92549)
position = Vector2(74, -59)
scale = Vector2(5, 5)
texture = ExtResource("3_8fpwt")

[node name="Boreman" type="Sprite2D" parent="."]
position = Vector2(1320, -49)
texture = ExtResource("3_cfga8")
script = ExtResource("4_gbxxv")

[node name="AnimationTree" type="AnimationTree" parent="Boreman"]
tree_root = SubResource("AnimationNodeStateMachine_b0uha")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boreman"]
libraries = {
"": SubResource("AnimationLibrary_lre4a")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(500, -52)
zoom = Vector2(0.455, 0.455)

[node name="Label" type="Label" parent="."]
offset_left = 965.0
offset_top = -615.0
offset_right = 1733.0
offset_bottom = -340.0
theme_override_font_sizes/font_size = 50
text = "Enough Internet for Today..."

[node name="watched" type="Label" parent="."]
offset_left = -388.0
offset_top = -368.0
offset_right = 585.0
offset_bottom = -270.0
theme_override_fonts/font = ExtResource("24_yg5fw")
theme_override_font_sizes/font_size = 85
text = "Watched N Funny Videos"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = -345.0
offset_top = 9.0
offset_right = 486.0
offset_bottom = 325.0
theme_override_font_sizes/font_size = 81
text = "Watch Again?"

[node name="Button2" type="Button" parent="."]
offset_left = -345.0
offset_top = 357.0
offset_right = 486.0
offset_bottom = 519.0
theme_override_font_sizes/font_size = 81
text = "Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_rh71b")
autoplay = true

[node name="Border" type="Sprite2D" parent="."]
position = Vector2(916, -19)
scale = Vector2(1, 1.529)
texture = ExtResource("26_i61tf")

[node name="Label2" type="Label" parent="."]
offset_left = -243.0
offset_top = -259.0
offset_right = 385.0
offset_bottom = -69.0
theme_override_fonts/font = ExtResource("24_yg5fw")
theme_override_font_sizes/font_size = 41
text = "random words"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
